sobre nosotros mdofiicado

--- a/PetHomeAngular/src/app/auth/login/login.component.html
+++ b/PetHomeAngular/src/app/auth/login/login.component.html
@@ -1,8 +1,8 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <h2>Iniciar sesión</h2>
 
   <input formControlName="email" placeholder="Email" type="email" />
   <input formControlName="password" placeholder="Contraseña" type="password" />
 
   <button type="submit" [disabled]="!loginForm.valid">Iniciar sesión</button>
-</form>
+</form> -->
