--- a/PetHomeAngular/src/app/auth/login/login.component.html
+++ b/PetHomeAngular/src/app/auth/login/login.component.html
@@ -1,8 +1,11 @@
 <div class="center-wrapper-login">
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
     <h2>Iniciar sesión</h2>
-    <button type="submit" [disabled]="!loginForm.valid">Iniciar sesión</button>
 
+    <input formControlName="email" placeholder="Email" type="email" />
+    <input formControlName="password" placeholder="Contraseña" type="password" />
+
+    <button type="submit" [disabled]="!loginForm.valid">Iniciar sesión</button>
   </form>
 
   <!-- <button (click)="logout()" class="logout-button">Cerrar sesión</button> -->
