--- a/PetHomeAngular/src/app/foot/foot.component.html
+++ b/PetHomeAngular/src/app/foot/foot.component.html
@@ -36,28 +36,24 @@
 
                 <ul class="list-unstyled">
                     <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Inicio</a>
+                        <a href="/inicio" class="text-dark"><i class="fas fa-paw pe-3"></i>Inicio</a>
                     </li>
                     <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Mascotas</a>
+                        <a href="/adopta" class="text-dark"><i class="fas fa-paw pe-3"></i>Adopta</a>
                     </li>
                     <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Protectoras</a>
+                        <a href="/organizaciones" class="text-dark"><i class="fas fa-paw pe-3"></i>Organizaciones</a>
                     </li>
                     <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Aviso Legal</a>
+                        <a href="/aviso-legal" class="text-dark"><i class="fas fa-paw pe-3"></i>Aviso Legal</a>
                     </li>
                     <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Privacidad</a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Cookies</a>
+                        <a href="/politica-privacidad" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Privacidad</a>
                     </li>
                 </ul>
             </div>
 
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <!-- Espacio vacío por si quieres agregar algo más después -->
             </div>
 
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
