--- a/PetHomeAngular/src/app/auth/login/login.component.html
+++ b/PetHomeAngular/src/app/auth/login/login.component.html
@@ -1,13 +1,17 @@
 <div class="center-wrapper-login">
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
-    <h2>Iniciar sesión</h2>
+    <h2 class="title">Iniciar sesión</h2>
 
-    <input formControlName="email" placeholder="Email" type="email" />
-    <input formControlName="password" placeholder="Contraseña" type="password" />
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" formControlName="email" type="email" required />
+    </div>
 
-    <button type="submit" [disabled]="!loginForm.valid">Iniciar sesión</button>
+    <div class="form-group">
+      <label for="password">Contraseña</label>
+      <input id="password" formControlName="password" type="password" required />
+    </div>
 
+    <button type="submit" class="submit" [disabled]="!loginForm.valid">Iniciar sesión</button>
   </form>
-
-  <!-- <button (click)="logout()" class="logout-button">Cerrar sesión</button> -->
 </div>
