--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -1,52 +1,58 @@
 <div class="center-wrapper">
-    <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <p class="title">¡Crea tu cuenta en PetHome!</p>
-        <mat-button-toggle-group formControlName="tipoUsuario" appearance="legacy" class="user-toggle">
-            <mat-button-toggle value="cliente">Cliente</mat-button-toggle>
-            <mat-button-toggle value="protectora">Protectora</mat-button-toggle>
-        </mat-button-toggle-group>
-        <p class="message">Únete a nuestra comunidad y dale una segunda oportunidad a una mascota. 🐶🐱 </p>
-        <div class="flex">
-            <label>
-                <input required="" formControlName="nombre" type="text" class="input">
-                <span>Nombre</span>
-            </label>
+  <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <p class="title">¡Crea tu cuenta en PetHome!</p>
 
-            <label>
-                <input required="" formControlName="telefono" placeholder="" type="text" class="input">
-                <span>Telefóno</span>
-            </label>
-        </div>
+    <mat-button-toggle-group formControlName="tipoUsuario" appearance="legacy" class="user-toggle">
+      <mat-button-toggle value="cliente">Cliente</mat-button-toggle>
+      <mat-button-toggle value="protectora">Protectora</mat-button-toggle>
+    </mat-button-toggle-group>
 
-        
-        <label>
-            <input required="" formControlName="email" placeholder="" type="email" class="input">
-            <span>Email</span>
-        </label>
-        
-        <label>
-            <input required="" formControlName="contrasena" placeholder="" type="password" class="input">
-            <span>Contraseña</span>
-        </label>
+    <p class="message">
+      Únete a nuestra comunidad y dale una segunda oportunidad a una mascota. 🐶🐱
+    </p>
 
-        @if (registerForm.get('tipoUsuario')?.value === 'protectora') {
-        <label>
-            <input required="" formControlName="direccion" placeholder="" type="text" class="input">
-            <span>Dirección</span>
-        </label>
+    <div class="flex">
+      <div class="form-group">
+        <label for="nombre">Nombre</label>
+        <input id="nombre" required formControlName="nombre" type="text" class="input" />
+      </div>
 
-        <label>
-            <input required formControlName="provincia" type="text" class="input">
-            <span>Localidad</span>
-        </label>
+      <div class="form-group">
+        <label for="telefono">Teléfono</label>
+        <input id="telefono" required formControlName="telefono" type="text" class="input" />
+      </div>
+    </div>
 
-        <label>
-            <input required formControlName="descripcion" type="text" class="input">
-            <span>Descripción</span>
-        </label>
-        }
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" required formControlName="email" type="email" class="input" />
+    </div>
 
-        <button class="submit" button type="submit" [disabled]="!registerForm.valid">Registrarme</button>
-        <p class="signin">¿Ya tienes una cuenta ? <a href="#">Iniciar sesión</a> </p>
-    </form>
+    <div class="form-group">
+      <label for="contrasena">Contraseña</label>
+      <input id="contrasena" required formControlName="contrasena" type="password" class="input" />
+    </div>
+
+    @if (registerForm.get('tipoUsuario')?.value === 'protectora') {
+      <div class="form-group">
+        <label for="direccion">Dirección</label>
+        <input id="direccion" required formControlName="direccion" type="text" class="input" />
+      </div>
+
+      <div class="form-group">
+        <label for="provincia">Localidad</label>
+        <input id="provincia" required formControlName="provincia" type="text" class="input" />
+      </div>
+
+      <div class="form-group">
+        <label for="descripcion">Descripción</label>
+        <input id="descripcion" required formControlName="descripcion" type="text" class="input" />
+      </div>
+    }
+
+    <button class="submit" type="submit" [disabled]="!registerForm.valid">Registrarme</button>
+    <p class="signin">
+      ¿Ya tienes una cuenta? <a href="#">Iniciar sesión</a>
+    </p>
+  </form>
 </div>
