añadido eliminar mascotas y editar mascotas + swal

--- a/PetHomeAngular/src/app/secciones/crear-mascotas/crear-mascotas.component.html
+++ b/PetHomeAngular/src/app/secciones/crear-mascotas/crear-mascotas.component.html
@@ -123,8 +123,15 @@
       }
     </div>
 
+    @if(isEditMode) {
+      <button type="submit" [disabled]="registerForm.invalid">Editar Mascota</button>
+
+    }@else {
     <button type="submit" [disabled]="registerForm.invalid">Registrar Mascota</button>
 
+    }
+
+    
     <!-- Aviso campos obligatorios -->
     <p class="required-note"><span class="required">*</span> Campos obligatorios</p>
   </form>
