--- a/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
+++ b/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
@@ -37,7 +37,7 @@
         <p>¿Quieres editar la informacion de {{ mascota.nombre }}?</p>
         
         
-        <button [routerLink]="['/detalle-organizacion', mascota.protectora.id]" class="btn-naranja">Editar {{ mascota.nombre }}</button>
+        <button [routerLink]="['/editar-mascotas', mascota.id]" class="btn-naranja">Editar {{ mascota.nombre }}</button>
         
       </div>
 
