--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -12,88 +12,77 @@
         
       
         
-        <select required name="provincia" id="pet-select" class="form-select mb-4">
-          <option value="">Elige Provincia</option>
-          <option value="Álava/Araba">Álava/Araba</option>
-          <option value="Albacete">Albacete</option>
-          <option value="Alicante">Alicante</option>
-          <option value="Almería">Almería</option>
-          <option value="Asturias">Asturias</option>
-          <option value="Ávila">Ávila</option>
-          <option value="Badajoz">Badajoz</option>
-          <option value="Baleares">Baleares</option>
-          <option value="Barcelona">Barcelona</option>
-          <option value="Burgos">Burgos</option>
-          <option value="Cáceres">Cáceres</option>
-          <option value="Cádiz">Cádiz</option>
-          <option value="Cantabria">Cantabria</option>
-          <option value="Castellón">Castellón</option>
-          <option value="Ceuta">Ceuta</option>
-          <option value="Ciudad Real">Ciudad Real</option>
-          <option value="Córdoba">Córdoba</option>
-          <option value="Cuenca">Cuenca</option>
-          <option value="Gerona/Girona">Gerona/Girona</option>
-          <option value="Granada">Granada</option>
-          <option value="Guadalajara">Guadalajara</option>
-          <option value="Guipúzcoa/Gipuzkoa">Guipúzcoa/Gipuzkoa</option>
-          <option value="Huelva">Huelva</option>
-          <option value="Huesca">Huesca</option>
-          <option value="Jaén">Jaén</option>
-          <option value="La Coruña/A Coruña">La Coruña/A Coruña</option>
-          <option value="La Rioja">La Rioja</option>
-          <option value="Las Palmas">Las Palmas</option>
-          <option value="León">León</option>
-          <option value="Lérida/Lleida">Lérida/Lleida</option>
-          <option value="Lugo">Lugo</option>
-          <option value="Madrid">Madrid</option>
-          <option value="Málaga">Málaga</option>
-          <option value="Melilla">Melilla</option>
-          <option value="Murcia">Murcia</option>
-          <option value="Navarra">Navarra</option>
-          <option value="Orense/Ourense">Orense/Ourense</option>
-          <option value="Palencia">Palencia</option>
-          <option value="Pontevedra">Pontevedra</option>
-          <option value="Salamanca">Salamanca</option>
-          <option value="Segovia">Segovia</option>
-          <option value="Sevilla">Sevilla</option>
-          <option value="Soria">Soria</option>
-          <option value="Tarragona">Tarragona</option>
-          <option value="Tenerife">Tenerife</option>
-          <option value="Teruel">Teruel</option>
-          <option value="Toledo">Toledo</option>
-          <option value="Valencia">Valencia</option>
-          <option value="Valladolid">Valladolid</option>
-          <option value="Vizcaya/Bizkaia">Vizcaya/Bizkaia</option>
-          <option value="Zamora">Zamora</option>
-          <option value="Zaragoza">Zaragoza</option>
-        </select>
+        <select required name="municipio" id="municipio-select" class="form-select mb-4" (change)="provinciaSeleccionada = $any($event.target).value; aplicarFiltros()">
+  <option value="">Elige Municipio</option>
+  <option value="Abanilla">Abanilla</option>
+  <option value="Abarán">Abarán</option>
+  <option value="Águilas">Águilas</option>
+  <option value="Albudeite">Albudeite</option>
+  <option value="Alcantarilla">Alcantarilla</option>
+  <option value="Alguazas">Alguazas</option>
+  <option value="Alhama de Murcia">Alhama de Murcia</option>
+  <option value="Archena">Archena</option>
+  <option value="Beniel">Beniel</option>
+  <option value="Blanca">Blanca</option>
+  <option value="Bullas">Bullas</option>
+  <option value="Calasparra">Calasparra</option>
+  <option value="Campos del Río">Campos del Río</option>
+  <option value="Caravaca de la Cruz">Caravaca de la Cruz</option>
+  <option value="Cartagena">Cartagena</option>
+  <option value="Cehegín">Cehegín</option>
+  <option value="Ceutí">Ceutí</option>
+  <option value="Cieza">Cieza</option>
+  <option value="Fortuna">Fortuna</option>
+  <option value="Fuente Álamo de Murcia">Fuente Álamo de Murcia</option>
+  <option value="Jumilla">Jumilla</option>
+  <option value="La Unión">La Unión</option>
+  <option value="Las Torres de Cotillas">Las Torres de Cotillas</option>
+  <option value="Librilla">Librilla</option>
+  <option value="Lorca">Lorca</option>
+  <option value="Lorquí">Lorquí</option>
+  <option value="Los Alcázares">Los Alcázares</option>
+  <option value="Mazarrón">Mazarrón</option>
+  <option value="Molina de Segura">Molina de Segura</option>
+  <option value="Moratalla">Moratalla</option>
+  <option value="Mula">Mula</option>
+  <option value="Murcia">Murcia</option>
+  <option value="Ojós">Ojós</option>
+  <option value="Pliego">Pliego</option>
+  <option value="Puerto Lumbreras">Puerto Lumbreras</option>
+  <option value="Ricote">Ricote</option>
+  <option value="San Javier">San Javier</option>
+  <option value="San Pedro del Pinatar">San Pedro del Pinatar</option>
+  <option value="Santomera">Santomera</option>
+  <option value="Torre-Pacheco">Torre-Pacheco</option>
+  <option value="Ulea">Ulea</option>
+  <option value="Villanueva del Río Segura">Villanueva del Río Segura</option>
+  <option value="Yecla">Yecla</option>
+</select>
+
 
         <div class="radio-especie">
         <h4 class="section-title mb-4">Especie</h4>
         <div class="radio-container">
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input id="option1" name="radio-especie" type="radio" value="Perro"
-                     (change)="getMascotasPorEspecie(especieSeleccionadaPerro)">
-              <span class="radio-checkmark"></span>
+              <input  name="radio-especie" type="checkbox" value="Perro"
+                     (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Perro</span>
             </label>
           </div>
           
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input id="option2" name="radio-especie" type="radio" value="Gato"
-                     (change)="getMascotasPorEspecie( especieSeleccionadaGato)">
-              <span class="radio-checkmark"></span>
+              <input id="option2" name="radio-especie" type="checkbox" value="Gato"
+                     (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Gato</span>
             </label>
           </div>
           
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input id="option3" name="radio-especie" type="radio" value="Otro"
-                     (change)="getMascotasPorEspecie(especieSeleccionadaOtro)">
-              <span class="radio-checkmark"></span>
+              <input id="option3" name="radio-especie" type="checkbox" value="Otro"
+                     (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Otro</span>
             </label>
           </div>
@@ -101,55 +90,6 @@
         </div>
       </div>
 
-      <div class="radio-edad">
-        <h4 class="section-title mb-4">Edad</h4>
-        <div class="radio-container">
-          <div class="radio-wrapper">
-            <label class="radio-button">
-              <input id="option1" name="radio-edad" type="radio" value="0-1" 
-                     (change)="getMascotasPorEdad(edadSeleccionada0_1)">
-              <span class="radio-checkmark"></span>
-              <span class="radio-label">0-1 años</span>
-            </label>
-          </div>
-        
-          <div class="radio-wrapper">
-            <label class="radio-button">
-              <input id="option2" name="radio-edad" type="radio"  value="1-2" 
-                     (change)="getMascotasPorEdad(edadSeleccionada1_2)">
-              <span class="radio-checkmark"></span>
-              <span class="radio-label">1-2 años</span>
-            </label>
-          </div>
-        
-          <div class="radio-wrapper">
-            <label class="radio-button">
-              <input id="option3" name="radio-edad" type="radio" value="2-4" 
-                     (change)="getMascotasPorEdad(edadSeleccionada2_4)">
-              <span class="radio-checkmark"></span>
-              <span class="radio-label">2-4 años</span>
-            </label>
-          </div>
-
-          <div class="radio-wrapper">
-            <label class="radio-button">
-              <input id="option4" name="radio-edad" type="radio" value="4-6" 
-                     (change)="getMascotasPorEdad(edadSeleccionada4_6)">
-              <span class="radio-checkmark"></span>
-              <span class="radio-label">4-6 años</span>
-            </label>
-          </div>
-
-          <div class="radio-wrapper">
-            <label class="radio-button">
-              <input id="option5" name="radio-edad" type="radio" value="6-10" 
-                     (change)="getMascotasPorEdad(edadSeleccionada6_10)">
-              <span class="radio-checkmark"></span>
-              <span class="radio-label">6-10 años</span>
-            </label>
-          </div>
-        </div>
-      </div>
 
 
 
@@ -158,42 +98,60 @@
   <div class="radio-container">
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="radio" value="Pequeño"
-               (change)="getMascotasPorTamano('Pequeño')">
-        <span class="radio-checkmark"></span>
+        <input name="radio-tamano" type="checkbox" value="Pequeño"
+               (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Pequeño</span>
       </label>
     </div>
 
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="radio" value="Mediano"
-               (change)="getMascotasPorTamano('Mediano')">
-        <span class="radio-checkmark"></span>
+        <input name="radio-tamano" type="checkbox" value="Mediano"
+               (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Mediano</span>
       </label>
     </div>
 
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="radio" value="Grande"
-               (change)="getMascotasPorTamano('Grande')">
-        <span class="radio-checkmark"></span>
+        <input name="radio-tamano" type="checkbox" value="Grande"
+               (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Grande</span>
       </label>
     </div>
   </div>
 </div>
-      </div>
 
 
+<div class="radio-genero">
+  <h4 class="section-title mb-4">Género</h4>
+  <div class="radio-container">
+    <div class="radio-wrapper">
+      <label class="radio-button">
+        <input name="radio-tamano" type="checkbox" value="Macho"
+               (change)="onCheckboxChange($event, 'genero')">
+        <span class="radio-label">Macho</span>
+      </label>
+    </div>
 
+    <div class="radio-wrapper">
+      <label class="radio-button">
+        <input name="radio-tamano" type="checkbox" value="Hembra"
+               (change)="onCheckboxChange($event, 'genero')">
+        <span class="radio-label">Hembra</span>
+      </label>
+    </div>
+</div>
+  
+</div>
+</div>
       
+
 
       
       <div class="col-md-9">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-          @for (mascotas of getMascotas(); track $index) {
+          @for (mascotas of mascotasFiltradas; track $index) {
             <app-mascota-card [mascota]="mascotas"/>
           }
         </div>
