--- a/PetHomeAngular/src/app/secciones/inicio/inicio.component.scss
+++ b/PetHomeAngular/src/app/secciones/inicio/inicio.component.scss
@@ -523,3 +523,9 @@
             cursor: pointer;
             transition: transform 0.2s;
         }
+
+
+        .container-mascotas {
+          display: flex;
+          justify-content: center;
+        }
