ajustado nav menu y añadidos simbolos genero

--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -1,7 +1,15 @@
 <div class="card">
   <img [src]="backendUrl + (mascota.imagenes?.[0]?.urlImagen)" style="width: 100%">
   <div class="card__content">
-    <p class="card__title">{{mascota.nombre}}</p>
+    <p class="card__title">
+      {{mascota.nombre}}
+      @if (mascota.genero == 'Hembra') {
+         <span style="color: deeppink;"><strong>♀</strong></span>
+      }@else {
+         <span style="color: dodgerblue;"><strong>♂</strong></span>
+      }
+    
+    </p>
     <p class="card__description">{{mascota.edad}} años</p>
     <p class="card__description">{{mascota.descripcion}}</p>
     <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button>
