--- a/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
+++ b/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
@@ -22,7 +22,7 @@
           <p>{{ mascota.salud || 'No especificada.' }}</p>
         </div>
         <div>
-          <h3>Localidad</h3>
+          <h3>Municipio</h3>
           <p>{{ mascota.localidad || 'Sin detalles adicionales.' }}</p>
         </div>
       </div>
