--- a/PetHomeAngular/src/app/secciones/sobre-nosotros/sobre-nosotros.component.html
+++ b/PetHomeAngular/src/app/secciones/sobre-nosotros/sobre-nosotros.component.html
@@ -1,6 +1,7 @@
 <section class="sobre-nosotros">
 
     <div class="overlay">
+      <div class="hero-text-blur">
         <div class="contenido">
       <h2 class="impacto">
         Casi 2.000 perros son abandonados al año en la Región de Murcia.
@@ -8,10 +9,10 @@
       <p class="mensaje">
         En nuestra plataforma, no miramos hacia otro lado. Buscamos darles una segunda oportunidad conectando a estos animales con personas y familias que sí están dispuestas a ofrecerles un hogar. 
         <br /><br />
-        Creamos un puente entre el abandono y el cariño, entre el pasado que duele y el futuro que merecen.
+   
       </p>
     </div>
-    
+    </div>
   </div>
 </section>
 
